--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img 
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="Don't be scared!">  
+    <img
+      src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+      alt="Don't be scared!"  
+      title="Save the Planet!">
   </body>
 </html>
